--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,12 @@
 [build]
+  base = "client"
   publish = "dist"
-  command = "vite build"
+  command = "npm install && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+  VITE_API_URL = "/.netlify/functions"
+  NODE_ENV = "production"
 
 [[redirects]]
   from = "/*"
