--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,11 @@
 [build]
-  base = "client"
   publish = "dist"
-  command = "npm install && npm run build"
+  command = "npm install && vite build"
 
 [build.environment]
   NODE_VERSION = "18"
-  VITE_API_URL = "/.netlify/functions"
   NODE_ENV = "production"
+  VITE_API_URL = "/.netlify/functions"
 
 [[redirects]]
   from = "/*"
